<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="הוסף מוצר"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etItemDescribtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ItemDescribtion"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/etItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etItemDescribtion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/itemPrice"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etItemPrice"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/itemQuantity"
        android:inputType="number" />



    <ImageView
        android:id="@+id/ivItemPic"
        android:layout_width="104dp"
        android:layout_height="74dp"
        android:layout_below="@+id/etItemQuantity"
        android:scaleType="fitXY"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"

        app:srcCompat="@drawable/add_post" />
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:layout_below="@id/ivItemPic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:padding="5dp"
        android:text="@string/take_pic_camera"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        android:background="@color/colorPrimary">


        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="ביטול"
            android:background="@color/colorPrimary"
            android:textSize="15dp"
            android:textColor="#0061f2"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnAddItemToList"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/commit"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>